--- a/land/bubble.css
+++ b/land/bubble.css
@@ -70,6 +70,16 @@ html, body {
     font-weight: bold;
     color: rgba(63, 63, 63, 0.547);
 }
+h2 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: normal;
+    color: rgba(63, 63, 63, 0.547);
+}
 #copy {
     position: relative;
     box-sizing: border-box;
