--- a/css/style.css
+++ b/css/style.css
@@ -84,34 +84,34 @@ section{
     margin-top: 6rem;
  }
  
- .home .container-fluid{
+ .home .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap-reverse;
     gap:1.5rem;
  }
  
- .home .container-fluid .content{
+ .home .row .content{
     flex:1 1 40rem;
     text-align: center;
  }
  
- .home .container-fluid .image{
+ .home .row .image{
     flex:1 1 40rem;
  }
  
- .home .container-fluid .image img{
+ .home .row .image img{
     width: 100%;
  }
  
- .home .container-fluid .content h2{
+ .home .row .content h3{
     margin-bottom: 1rem;
     font-size: 10rem;
     color:var(--white);
     line-height: 1;
  }
  
- .home .container-fluid .content h2 span{
+ .home .row .content h3 span{
     color:var(--green);
  }
 
@@ -513,10 +513,11 @@ section{
 }
 
 .nanik .content p{
-    FONT-WEIGHT: 400;padding:1rem 0;
-    color: rgb(0, 0, 0);
-    font-size: 2rem;
-    line-height: 2;
+    FONT-WEIGHT: 400;
+    padding: 1rem 20;
+    color: rgb(46 46 46);
+    font-size: 3rem;
+    /* line-height: 2; */
 }
 
 
